# jetbrains-test-runner

./: .gitignore  README.md  controller.py  pyproject.toml  task.md
src/: controller.py  generator.py
tests/: test_controller.py  test_generator.py
